--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -126,6 +126,11 @@
       @media (max-width: 1150px) {
         visibility: visible;
       }
+
+      @media (max-width: 700px) {
+        width: 25px;
+        height: 25px;
+      }
     }
 
     &-tablet:hover {
